# fci-protocol

./: CMakeLists.txt  README.md
cmake/: Zephyr.cmake
include/fci_protocol/: arm.hpp  protocol.hpp  upgrade.hpp  version.hpp
include/fci_protocol/arm/: constants.hpp  device_info.hpp  packets.hpp
include/fci_protocol/message/: arm.hpp  arm_control.hpp  upgrade.hpp
include/fci_protocol/session/: arm_control_session.hpp  stream_session.hpp  upgrade_control_session.hpp
include/fci_protocol/transport/: byte_stream_transport.hpp
include/fci_protocol/upgrade/: constants.hpp  packets.hpp  transport.hpp
include/florid_usb_protocol/: protocol.hpp  upgrade.hpp
include/florid_usb_protocol/message/: upgrade.hpp
include/florid_usb_protocol/session/: stream_session.hpp  upgrade_control_session.hpp
include/florid_usb_protocol/transport/: byte_stream_transport.hpp
include/florid_usb_protocol/upgrade/: builder.hpp  chunk_plan.hpp  constants.hpp  crc.hpp  image.hpp  packets.hpp  transport.hpp
src/upgrade/: builder.cpp  chunk_plan.cpp  crc.cpp  image.cpp
zephyr/: Kconfig  module.yml
